--- a/app/views/test2/index.phtml
+++ b/app/views/test2/index.phtml
@@ -7,4 +7,5 @@
         </div>
         <button type="submit" class="btn btn-primary">Sačuvaj</button>
     </form>
+    <p><?php echo $message ?></p>
 </div>
