--- a/app/views/test2/index.phtml
+++ b/app/views/test2/index.phtml
@@ -5,6 +5,10 @@
             <label for="name">Ime:</label>
             <input type="text" name="name" class="form-control" id="name" required>
         </div>
+        <div class="form-group">
+            <label for="file">Datoteka:</label>
+            <input type="file" name="file" id="file">
+        </div>
         <button type="submit" class="btn btn-primary">Sačuvaj</button>
     </form>
     <p><?php echo $message ?></p>
