Provera da li moze upis u tmp folder gde mi se cuvaju fajlovi

--- a/app/views/test2/index.phtml
+++ b/app/views/test2/index.phtml
@@ -1,5 +1,6 @@
 <div class="container">
     <h2>Unesite ime i sačuvajte ga sa vremenskim podacima</h2>
+    <p><?php echo $td ?></p>
     <form method="post" action="">
         <div class="form-group">
             <label for="name">Ime:</label>
@@ -12,4 +13,5 @@
         <button type="submit" class="btn btn-primary">Sačuvaj</button>
     </form>
     <p><?php echo $message ?></p>
+    <p><?php echo $a ?></p>
 </div>
