--- a/app/views/test2/index.phtml
+++ b/app/views/test2/index.phtml
@@ -1,18 +1,24 @@
 <div class="container">
     <h2>Unesite ime i sačuvajte ga sa vremenskim podacima</h2>
     <p><?php echo $td ?></p>
-    <form method="post" action="">
+
+    <form method="post" action="" enctype="multipart/form-data">
         <div class="form-group">
             <label for="name">Ime:</label>
-            <input type="text" name="name" class="form-control" id="name" required>
+            <input type="text" name="name" id="name" class="form-control" required>
         </div>
+
         <div class="form-group">
             <label for="file">Datoteka:</label>
             <input type="file" name="file" id="file">
         </div>
+
         <button type="submit" class="btn btn-primary">Sačuvaj</button>
     </form>
-    <p><?php echo $message ?></p>
-    <p><?php echo $a ?></p>
-<!--    <p>--><?php //echo $b ?><!--</p>-->
+
+    <p><?php echo $err ?></p>
+    <p><?php echo $bool ?></p>
+    <p><?php echo $fileName ?></p>
+    <p>Uploaded Files: <?php var_dump($uploadedFiles); ?></p>
+
 </div>
