Cuvanje fajla u db.

--- a/app/views/test2/index.phtml
+++ b/app/views/test2/index.phtml
@@ -16,9 +16,6 @@
         <button type="submit" class="btn btn-primary">Sačuvaj</button>
     </form>
 
-    <p><?php echo $err ?></p>
-    <p><?php echo $bool ?></p>
-    <p><?php echo $fileName ?></p>
+    <p><?php echo $a ?></p>
     <p>Uploaded Files: <?php var_dump($uploadedFiles); ?></p>
-
 </div>
